# product

./: README.md  app.py  cli.py  create_requirements_from_main.py  main.py  pyproject.toml  requirements.txt
api_clients/: __init__.py  github_client.py  hackernews_client.py  news_client.py  pytrends_client.py  reddit_client.py  stackoverflow_client.py
data_processing/: analyzer.py  processor.py
static/css/: custom.css
static/js/: charts.js
templates/: 404.html  500.html  index.html  trends.html  visualizations.html
tests/: test_api_clients.py  test_processor.py
utils/: __init__.py  cache.py  config.py  logger.py
